# AI_Studio

./: .gitignore  README.md
hw1/: README.md  REFLECTION.md
hw1/mrugank_ai/: README.md  pyproject.toml  report.md
hw1/mrugank_ai/knowledge/: user_preference.txt
hw1/mrugank_ai/src/mrugank_ai/: crew.py  main.py
hw1/mrugank_ai/src/mrugank_ai/config/: agents.yaml  tasks.yaml
