[project]
name = "mrugank_ai"
version = "0.1.0"
description = "mrugank_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
mrugank_ai = "mrugank_ai.main:run"
run_crew = "mrugank_ai.main:run"
train = "mrugank_ai.main:train"
replay = "mrugank_ai.main:replay"
test = "mrugank_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
